Version 2.2.041
    Fixed Berserk failing to crack blocks
    Optimizations for Hoppers & Alchemy (thanks Warriorrrr)
    Fixed buckets being consumed by furnaces (thanks RunqRun)
    Fixed Repair stripping unsafe enchantments from items (thanks Techirion)
    Fixed IronGolem causing cast exceptions in rare cases (thanks Techirion)

Version 2.2.040
    Fixed hover component and action bar messages not working for 1.21.6 and 1.21.7
    Fixed bug where entries of mctop could be duplicated when using FlatFile
    Fixed bug where a party leader could leave a party and the party would be left without a party leader
    Fixed a bug where EcoEnchants and similar plugins could cause an infinite loop within mcMMO during TreeFeller and other abilities
    Added 'Happy_Ghast' to experience.yml for combat XP
    Added 'Ghastling' to experience.yml for combat XP
    Updated Japanese (ja_JP) translation (Thanks ryota-abe)
    Updated Simplified Chinese (zh_CN) locale (Thanks GhostDC)

Version 2.2.039
    Added StackOverflow safeguards for abilities dealing damage in mcMMO
    Improved compatibility with MythicMobs/ModelEngine
    Improved compatibility with AdvancedEnchantments

Version 2.2.038
    Fix potion match failing for non-english locales
    FoliaLib Performance improvements (thanks SirSalad)
    Fixed situations where Rupture could never end which affected server performance

Version 2.2.037
    Fixed bug where Alchemy was not matching potions correctly and producing incorrect results (Thanks TheBentoBox)

Version 2.2.036
    Fixed a bug where Chimaera Wing could cause an exception when used
    Fixed bug where Mob Spawners could drop in Blast Mining (thanks TomBock)
    Fixed Spectral Arrows not granting XP for Archery or Crossbows (thanks broccolai)
    Fixed bug where Trickshot arrows would lose their potion or custom effects
    Added locale strings for /mcmmo help command (thanks Griffeng)

Version 2.2.035
    Support for new additions from Minecraft 1.21.5